tests/ui/cve_2020_35901_2/cve_2020_35902.stderr
error: it is unsound to call `Pin::new_unchecked` on a mutable reference that can be freely moved
  --> tests/ui/cve_2020_35901_2/cve_2020_35902.rs:119:17
   |
LL |     pub fn flush(&mut self, cx: &mut Context<'_>) -> Poll<Result<(), U::Error>>
   |                  --------- mutable reference passed into a public function here
...
LL |                 Pin::new_unchecked(&mut self.io).poll_write(cx, &self.write_buf)
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Pin::new_unchecked` called here
   |
   = note: type `T` doesn't implement `Unpin`
   = note: `#[deny(rpl::unsound_pin_project)]` on by default

error: it is unsound to call `Pin::new_unchecked` on a mutable reference that can be freely moved
  --> tests/ui/cve_2020_35901_2/cve_2020_35902.rs:136:25
   |
LL |     pub fn flush(&mut self, cx: &mut Context<'_>) -> Poll<Result<(), U::Error>>
   |                  --------- mutable reference passed into a public function here
...
LL |         ready!(unsafe { Pin::new_unchecked(&mut self.io).poll_flush(cx) })?;
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Pin::new_unchecked` called here
   |
   = note: type `T` doesn't implement `Unpin`

error: it is unsound to call `Pin::new_unchecked` on a mutable reference that can be freely moved
  --> tests/ui/cve_2020_35901_2/cve_2020_35902.rs:151:20
   |
LL |     pub fn close(&mut self, cx: &mut Context<'_>) -> Poll<Result<(), U::Error>>
   |                  --------- mutable reference passed into a public function here
...
LL |             ready!(Pin::new_unchecked(&mut self.io).poll_flush(cx))?;
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Pin::new_unchecked` called here
   |
   = note: type `T` doesn't implement `Unpin`

error: it is unsound to call `Pin::new_unchecked` on a mutable reference that can be freely moved
  --> tests/ui/cve_2020_35901_2/cve_2020_35902.rs:153:20
   |
LL |     pub fn close(&mut self, cx: &mut Context<'_>) -> Poll<Result<(), U::Error>>
   |                  --------- mutable reference passed into a public function here
...
LL |             ready!(Pin::new_unchecked(&mut self.io).poll_shutdown(cx))?;
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Pin::new_unchecked` called here
   |
   = note: type `T` doesn't implement `Unpin`

error: aborting due to 4 previous errors

